Refactor: streamline Elasticsearch configuration and retrieval methods
We try to simplify the code by exposing only 2 methods:

* vectorSearch
* retrieve